fixed invisible X-button in selfservice for SEAB

--- a/selfservice-SEAB.css
+++ b/selfservice-SEAB.css
@@ -8496,6 +8496,10 @@ a:focus{
   border-color: var(--primary-color) !important;
 }
 
+.z-window-close i{
+  color: black !important;
+}
+
 /***** UNCOMMENT THIS FOR "BIG-BUTTON" LAYOUT FOR "MINA ÄRENDEN"
 .frontpage .row.z-div > .col-sm-6.z-div:first-of-type > div > a > div{
   display: flex;
